=Made changes so works with python 2.6
git-svn-id: http://svn.ucc.asn.au:8080/oxinabox/Uni%20Notes/honours/prototypes/ipython/yadlf@1907 a0b86eba-9b95-4faf-b860-5d9d438e4fb8

--- a/datasets/makefile
+++ b/datasets/makefile
@@ -1,4 +1,5 @@
-DATASETS = ten_letters_loaded.py mnist_loaded.py astro_loaded.py
+DATASETS = ten_letters_loaded.py mnist_loaded.py 
+#astro_loaded.py
 
 all: $(DATASETS)
 
